clean up top header

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ nav {
     background-color: #1E7A57;
     padding: 1rem;
     margin-bottom: 1rem;
+    border-bottom: 4px solid #E7C789;
 }
 
 nav ul {
