--- a/style.css
+++ b/style.css
@@ -1,8 +1,65 @@
+@media (max-width: 768px) {
+    .nav-links {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+/* ===== header ===== */
+
+.header {
+    background-color: #D6E3E6;
+    padding: .5rem;
+    border-bottom: 4px solid #E7C789;
+}
+
+.header-text {
+    font-size: 0.9rem;
+    color: #1E7A57;
+    text-align: center;
+    padding: 1rem;
+}
+
+/* ===== nav ===== */
+nav {
+    background-color: #1E7A57;
+    margin-bottom: 1rem;
+    border-bottom: 4px solid #E7C789;
+}
+
+
+.navbar {
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 1rem;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+    margin-left: 2rem;
+}
+
+nav a {
+    color: #F6F1E5;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 1.2rem;
+}
+
+nav a:hover {
+    color: #E7C789;
+}
+
+/* ===== main ===== */
 
 body {
     font-family: "Segoe UI", sans-serif;
@@ -10,51 +67,59 @@ body {
     color: black;
 }
 
-nav {
-    background-color: #1E7A57;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-bottom: 4px solid #E7C789;
-}
-
-nav ul {
-    list-style: none;
-    display: flex;
-    gap: 1.5rem;
-    justify-content: left;
-}
-
-nav a {
-    color: #F6F1E5;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-nav a:hover {
-    color: #E7C789;
-}
-
 /* ===== Headings ===== */
 h1 {
-    text-align: center;
+    text-align: left;
     color: #1E7A57;
-    margin-bottom: 1rem;
+    margin: 1rem;
+    padding-bottom: 1rem;
+
 }
 
 h2 {
     color: #EF7014;
-    margin-top: 2rem;
-    margin-bottom: 0.5rem;
-    padding-left: 5rem;
+    margin: 1rem;
+}
+
+/* ===== Text Content ===== */
+p.main {
+    margin-left: 1rem;
+    padding: .5rem;
+    margin-right: 2rem;
+}
+
+.why-us {
+    padding-top: 1rem;
 }
 
 /* ===== Images ===== */
 .logo {
     display: block;
-    margin: 1rem auto;
+    margin: 1rem;
     border-radius: 8px;
     background-color: #D6E3E6;
     padding: 0.25rem;
+}
+
+.logo img {
+    width: 100px;
+    height: auto;
+}
+
+.logo-bottom {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+    border-radius: 8px;
+    padding: 1rem;
+}
+
+
+.pets-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .pets {
@@ -62,49 +127,64 @@ h2 {
     margin: 1rem;
     border-radius: 8px;
     background-color: #D6E3E6;
-    padding: 0.25rem;
-}
-
-.pets-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-    flex-wrap: wrap;
-}
-
-/* ===== Text Content ===== */
-p {
-    margin-left: 4rem;
     padding: 1rem;
 }
 
 /* ===== Services List ===== */
-ul {
+ul.services {
     max-width: 500px;
-    margin-left: 10rem;
-    padding: 1rem;
+    margin-left: 5rem;
 }
 
-ul li {
-    margin-bottom: 0.5rem;
+li.services {
+    margin-bottom: 1rem;
 }
 
 /* ===== Footer ===== */
-.header {
-    background-color: #D6E3E6;
-    padding: 1rem;
-    font-size: 0.9rem;
-    color: #1E7A57;
-    border-bottom: 4px solid #E7C789;
-    text-align: center;
-}
 
 .footer {
     background-color: #D6E3E6;
-    padding: 1rem;
+    padding: .5rem;
+    border-top: 4px solid #E7C789;
+    margin-top: 2rem;
+}
+
+.footer-text {
     font-size: 0.9rem;
     color: #1E7A57;
-    border-top: 4px solid #E7C789;
     text-align: center;
+    padding: 1rem;
+}
+
+/* ===== button ===== */
+
+.button-container-1 {
+    display: flex;
+    justify-content: left;
+    margin: 2rem;
+}
+
+.button-container-2 {
+    display: flex;
+    justify-content: left;
+    margin: 2rem;
+}
+
+.button {
+    padding: .5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    background-color: #D6E3E6;
+    color: #1E7A57;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0 8px #999;
+    font-weight: bold;
+}
+
+.button:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
