--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .services-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu-container {
+        max-width: 100%;
+    }
 }
 
 * {
@@ -57,6 +66,7 @@ nav a {
 
 nav a:hover {
     color: #E7C789;
+    text-decoration: underline;
 }
 
 /* ===== main ===== */
@@ -92,6 +102,20 @@ p.main {
     padding-top: 1rem;
 }
 
+ul.services {
+    max-width: 500px;
+    margin-left: 5rem;
+    margin-top: 1rem;
+}
+
+.our-process {
+    margin-bottom: 2rem;
+}
+
+li.services {
+    margin-bottom: 1rem;
+}
+
 /* ===== Images ===== */
 .logo {
     display: block;
@@ -111,7 +135,14 @@ p.main {
     justify-content: center;
     margin: 1rem;
     border-radius: 8px;
-    padding: 1rem;
+}
+
+.logo-bottom img {
+    width: 400px;
+    height: auto;
+    display: inline-block;
+    background-color: #D6E3E6;
+    padding: .5rem;
 }
 
 
@@ -127,18 +158,9 @@ p.main {
     margin: 1rem;
     border-radius: 8px;
     background-color: #D6E3E6;
-    padding: 1rem;
+    padding: .5rem;
 }
 
-/* ===== Services List ===== */
-ul.services {
-    max-width: 500px;
-    margin-left: 5rem;
-}
-
-li.services {
-    margin-bottom: 1rem;
-}
 
 /* ===== Footer ===== */
 
@@ -167,7 +189,7 @@ li.services {
 .button-container-2 {
     display: flex;
     justify-content: left;
-    margin: 2rem;
+    margin: 1rem;
 }
 
 .button {
@@ -185,6 +207,43 @@ li.services {
 }
 
 .button:active {
-    box-shadow: 0 5px #666;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transform: translateY(4px);
+}
+
+/* services menu */
+.services-menu {
+    display: flex;
+    gap: 1.5rem;
+    margin: 2rem;
+}
+
+.menu-container {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    background-color: #D6E3E6;
+    border-radius: 1rem;
+    border-bottom: 4px solid #E7C789;
+}
+
+.menu-card {
+    border-radius: 1rem;
+    background-color: #D6E3E6;
+    padding: .5rem;
+}
+
+.menu-card:hover {
+    transform: translateY(-4px);
+    transition: transform 0.2s ease;
+
+}
+
+.menu-title {
+    padding-bottom: .5rem;
+    color: #1E7A57;
+}
+
+.menu-body {
+    border-radius: 1rem;
+    padding-left: 1rem;
 }
